# sugar-quiz

./: .flake8  .gitignore  README.md  app.json  extra_poetry_deps.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  scripts.py
frontend/: site.css  tailwind.config.js
main/: settings.py  urls.py  wsgi.py
quiz_files/: createdoors.py  createusers.py
ragus/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
ragus/migrations/: 0001_initial.py  0002_door_acme_device_id.py  __init__.py
sugar/: apps.py  tests.py  urls.py
templates/: base.html  index.html
templates/ragus/: door_list.html
templates/registration/: loggedout.html  login.html
