[tool.poetry]
name = "sugar-quiz"
version = "0.1.0"
description = ""
authors = ["Jonathan Bayless <baylessjonathan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django-heroku = "^0.3.1"
gunicorn = "^20.0.4"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
test = "scripts:test"
lint = "scripts:lint"
format = "scripts:format"
docs = "scripts:docs"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
