[tool.poetry]
name = "ragus"
version = "0.1.0"
description = ""
authors = ["Jonathan Bayless <baylessjonathan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django-heroku = "^0.3.1"
gunicorn = "^20.0.4"
Django = "^3.2.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^5.2.1"}
pytest-cov = "^2.10.0"
flake8 = "^3.8.3"
black = "^19.10b0"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.4"
flake8-bandit = "^2.1.2"
mypy = "^0.910"
flake8-annotations = "^2.3.0"
flake8-docstrings = "^1.5.0"

[tool.poetry.scripts]
test = "scripts:test"
lint = "scripts:lint"
format = "scripts:format"
docs = "scripts:docs"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
